--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "sucrase ./src -d ./dist --transforms typescript,imports",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "handler": "sucrase-node src/handler.ts",
     "start": "sucrase-node src/server.ts",
     "start:dev": "APPLICATION_ENV='development' nodemon src/server.ts --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -27,11 +28,13 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "@vendia/serverless-express": "^4.8.2",
+    "aws-lambda": "^1.0.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
     "winston": "^3.7.2"
   },
@@ -52,7 +55,6 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.7.1",
     "sucrase": "^3.17.0",
-    "supertest": "^6.2.3",
     "typescript": "^4.1.3"
   }
 }
