--- a/.projectrc
+++ b/.projectrc
@@ -1,7 +1,10 @@
-APP_NAME=serverless-node-template
-APP_DESCRIPTION=Template to build customizable, flexible and well documented APIs with Node.js and Express.
+APP_NAME=serverless-lambda-api-node-template
+APP_DESCRIPTION="Template to build customizable, flexible and well documented APIs with Node.js and Express."
+APP_AUTHOR="Anderson Contreira"
+APP_AUTHOR_EMAIL=anderson.contreira@gmail.com
+APP_REPOSITORY=https://github.com/andersoncontreira/serverless-lambda-api-node-template
 APP_VERSION=1.0.0
-NETWORK_NAME=service-python-v1
+NETWORK_NAME=service-node-v1
 APP_QUEUE=test-queue
 APP_PORT=3000
 APP_BUCKET=test-bucket
